@@ -105,10 +105,9 @@ private:
 };
 
 
-
 class protect_goal : public goal {
 public:
-	protect_goal(readonly_context &context, const config &cfg);
+	protect_goal(readonly_context &context, const config &cfg, bool protect_only_own_unit, bool protect_unit);
 
 
 	virtual void add_targets(std::back_insert_iterator< std::vector< target > > target_list);
@@ -124,8 +123,37 @@ private:
 	}
 
 	boost::shared_ptr<terrain_filter> filter_ptr_;
+	bool protect_only_own_unit_;
+	bool protect_unit_;
 	int radius_;
 	double value_;
+};
+
+
+class protect_location_goal : public protect_goal {
+public:
+	protect_location_goal(readonly_context &context, const config &cfg)
+	: protect_goal(context,cfg,false,false)
+	{
+	}
+};
+
+
+class protect_unit_goal : public protect_goal {
+public:
+	protect_unit_goal(readonly_context &context, const config &cfg)
+	: protect_goal(context,cfg,false,true)
+	{
+	}
+};
+
+
+class protect_my_unit_goal : public protect_goal {
+public:
+	protect_my_unit_goal(readonly_context &context, const config &cfg)
+	: protect_goal(context,cfg,true,true)
+	{
+	}
 };
 
 
